<resources>
    <string name="app_name">Growme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="textview">TextView</string>
    <string name="plant_name">Plant Name</string>
    <string name="description">Description</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="enter_email">Enter Email</string>

    <string name="enter_password">Enter password</string>
    <string name="retype_password">Retype password</string>
    <string name="login">Login</string>
    <string name="add_plant_to_list">Add Plant to List</string>
    <string name="add_image">Add Image</string>
    <string name="username_man_com">username@man.com</string>
    <string name="_123456">123456</string>
    <string name="log_in_button">Log in button</string>
    <string name="sing_up_button">Sing up button</string>
    <string name="app_logo_growme">App logo, GrowMe</string>
    <string name="welcome_to_growme_this_is_a_plant_organiser_app_to_keep_your_plants_happy_an_healthy_log_in_and_get_started_if_you_are_new_here_sign_up_with_one_simple_button_click">Welcome to GrowMe! This is a plant organiser app to keep your plants happy an healthy. Log in and get started! If you are new here, sign up with one simple button click.</string>
    <string name="water_scale_1_7">Water scale 1–7</string>
    <string name="sunlight_scale_1_8">Sunlight scale 1–8</string>
    <string name="fertilizer_scale_1_8">Fertilizer scale 1–8</string>
    <string name="number">Number</string>

    <string name="open_camera">Open camera</string>
    <string name="plant_image">Plant image</string>
    <string name="open_gallery">Open gallery</string>
    <string name="select_plant">Select plant</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="fertilizer_scale_0_8">fertilizer scale 0-8</string>
    <string name="list">list</string>
    <string name="water_timer">water timer</string>
    <string name="a_plant">a Plant</string>
    <string name="my_water_plant_list">My Water plant list</string>
</resources>