<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.AddFragment">

    <Button
        android:id="@+id/btnAddPlantToList"
        android:layout_width="170dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/add_plant_to_list"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPictureImageView" />

    <EditText
        android:id="@+id/editTextTextPlantNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:autofillHints="Name of the plant"
        android:ems="10"
        android:hint="@string/plant_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPlantDescriptionDetails"
        android:layout_width="384dp"
        android:layout_height="102dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPlantNameDetails"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPlantNameDetails"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPlantNameDetails"
        android:autofillHints="Description of the plant" />

    <ImageView
        android:id="@+id/addPictureImageView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPlantDescriptionDetails"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPlantDescriptionDetails"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:src="@drawable/imageholder"
        android:contentDescription="@string/plant_image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddPictureFromCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:clickable="true"
        android:src="@drawable/camera_button"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPictureImageView"
        android:contentDescription="@string/open_camera"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddPictureFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/gallery_button"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/btnAddPictureFromCamera"
        app:layout_constraintTop_toBottomOf="@+id/addPictureImageView"
        android:contentDescription="@string/open_gallery"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditSun" />

    <TextView
        android:id="@+id/textViewEditWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/water_scale_1_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPlantDescriptionDetails" />

    <TextView
        android:id="@+id/textViewEditSun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/sunlight_scale_1_8"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEditWater"
        app:layout_constraintStart_toEndOf="@+id/textViewEditWater"
        app:layout_constraintTop_toTopOf="@+id/textViewEditWater"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewEditFertilizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/fertilizer_scale_1_8"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEditSun"
        app:layout_constraintStart_toEndOf="@+id/textViewEditSun"
        app:layout_constraintTop_toTopOf="@+id/textViewEditSun"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEditFertilizer"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/number"
        app:layout_constraintEnd_toEndOf="@+id/textViewEditFertilizer"
        app:layout_constraintStart_toStartOf="@+id/textViewEditFertilizer"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditFertilizer"
        android:autofillHints="Number 1-8" />

    <EditText
        android:id="@+id/editTextEditSun"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/number"
        app:layout_constraintEnd_toEndOf="@+id/textViewEditSun"
        app:layout_constraintStart_toStartOf="@+id/textViewEditSun"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditSun"
        android:autofillHints="Number 1-8" />

    <EditText
        android:id="@+id/editTextEditWater"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:autofillHints="Number 1-8"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewEditWater"
        app:layout_constraintStart_toStartOf="@+id/textViewEditWater"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditWater" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewAdd"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:hint="@string/select_plant"
        android:text=""
        android:completionThreshold="1"
        android:completionHint="Select a plant"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPlantNameDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

</androidx.constraintlayout.widget.ConstraintLayout>